--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,37 +1,26 @@
-# Javascript Node CircleCI 2.0 configuration file
-#
-# Check https://circleci.com/docs/2.0/language-javascript/ for more details
-#
-version: 2
-jobs:
-  build:
-    docker:
-      # specify the version you desire here
-      - image: circleci/node:7.10
+## Customize the test machine
+machine:
 
-      # Specify service dependencies here if necessary
-      # CircleCI maintains a library of pre-built images
-      # documented at https://circleci.com/docs/2.0/circleci-images/
-      # - image: circleci/mongo:3.4.4
+  timezone:
+    America/Los_Angeles # Set the timezone
 
-    working_directory: ~/repo
+## Customize dependencies
+dependencies:
+  override:
+    - npm install
+    # - npm install -g hexo
+    - npm install -g hexo-cli
 
-    steps:
-      - checkout
+## Customize test commands
+test:
+ override:
+   - echo "testing"
 
-      # Download and cache dependencies
-      - restore_cache:
-          keys:
-            - v1-dependencies-{{ checksum "package.json" }}
-            # fallback to using the latest cache if no exact match is found
-            - v1-dependencies-
-
-      - run: yarn install
-
-      - save_cache:
-          paths:
-            - node_modules
-          key: v1-dependencies-{{ checksum "package.json" }}
-
-      # run tests!
-      - run: yarn test
+## Customize deployment commands
+deployment:
+  prod:
+    branch: master
+    commands:
+      - hexo clean
+      - hexo generate
+      - aws s3 sync public/ <s3://your-s3-bucket.com/>
