edited the config.yml text file again for the aws orbs

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,9 +1,15 @@
+version: 2.1
+
+orbs:
+  aws-cli: circleci/aws-cli@0.1.16
+
 ## Customize the test machine
 machine:
 
   timezone:
     America/Los_Angeles # Set the timezone
 
+version: 2.1
 ## Customize dependencies
 dependencies:
   override:
