Decided to go to aws CodePipeline instead of circleci due to issues

--- a/_config.yml
+++ b/_config.yml
@@ -95,4 +95,6 @@ theme: alpha-dust
 # Deployment
 ## Docs: https://hexo.io/docs/deployment.html
 deploy:
-  type: ''
+  type: aws-s3
+  bucket: thefakehacker.com
+  region: us-east-1
