--- a/themes/alpha-dust/_config.yml
+++ b/themes/alpha-dust/_config.yml
@@ -1,5 +1,5 @@
 # Logo (Font Awesome Class)
-fa_logo: fa-cube
+fa_logo: "fas fa-laptop"
 
 # Header
 menu:
@@ -37,7 +37,7 @@ email_url: test@example.com
 rss_url: \#
 
 # Footer About Text
-footer_about: "This theme was developed by <a href=\"https://github.com/klugjo\">Jonathan Klughertz</a>. The source code is available on Github. Create Websites. Make Magic."
+footer_about: "The Fake Hacker brings you important topics in the cyber security field regarding how things work and can be implemented."
 
 # Footer Copyright Line
 footer_copyright: "@Untitled. All right reserved | Design & Hexo <a href=\"http://www.codeblocq.com/\">Jonathan Klughertz</a>"
